kube_apps/homeassistant/deploy-homeassist.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: homeassist
  name: homeassist
  namespace: home-assist
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: homeassist
  template:
    metadata:
      labels:
        app: homeassist
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest"
    spec:
      securityContext:
        runAsUser: 977
        runAsGroup: 988
        #fsGroup: 0
        supplementalGroups: [ 0 ]
      containers:
        - name: homeassist
          securityContext:
            runAsUser: 977
          image: ghcr.io/home-assistant/home-assistant:2026.8.1
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "800Mi"
            requests:
              memory: "600Mi"
              cpu: "10m"
          ports:
            - containerPort: 8123
              protocol: TCP
              name: http
            - containerPort: 5683
              protocol: UDP
              name: coiot
          volumeMounts:
            - name: ha-data
              mountPath: /config
      restartPolicy: Always
      volumes:
        - name: ha-data
          persistentVolumeClaim:
            claimName: pvc-homeassist-unifi
