kube_apps/homeassistant/svc-ha-coIoT.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-homeassist-cluster
  namespace: home-assist
  labels:
    app: homeassist
spec:
  selector:
    app: homeassist
  ports:
    - name: CoIoT
      protocol: UDP
      port: 5683
      targetPort: 5683
  type: NodePort
