kube_apps/homeassistant/svc-homeassist-cluster.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-homeassist-cluster
  namespace: home-assist
  labels:
    app: homeassist
spec:
  selector:
    app: homeassist
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-coiot
  namespace: home-assist
  labels:
    app: homeassist
spec:
  type: NodePort
  selector:
    app: homeassist
  ports:
    - protocol: UDP
      port: 5683
      targetPort: 5683
      nodePort: 30683
